tests/negative/typecheck/select.orng
fn main() -> Int
    let x: (a: Int, b: Char) = (1, '2')
    x.b